--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -1,4 +1,6 @@
+public
 *.DS_Store
+
 # Logs
 logs
 *.log
@@ -54,12 +56,6 @@ typings/
 # Optional eslint cache
 .eslintcache
 
-# Microbundle cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
-
 # Optional REPL history
 .node_repl_history
 
@@ -76,18 +72,11 @@ typings/
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
-# Next.js build output
+# next.js build output
 .next
 
-# Nuxt.js build / generate output
+# nuxt.js build output
 .nuxt
-dist
-
-# Gatsby files
-.cache/
-# Comment in the public line in if your project uses Gatsby and *not* Next.js
-# https://nextjs.org/blog/next-9-1#public-directory-support
-# public
 
 # vuepress build output
 .vuepress/dist
@@ -100,6 +89,3 @@ dist
 
 # DynamoDB Local files
 .dynamodb/
-
-# TernJS port file
-.tern-port
