--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
 	"main": "src/index.tsx",
 	"dependencies": {
 		"@tlaukkan/tsm": "0.8.5",
+		"@types/lodash-es": "^4.17.3",
+		"@types/prettier": "^1.18.3",
+		"lodash-es": "^4.17.15",
+		"paper": "^0.12.3",
+		"prettier": "^1.19.1",
 		"react": "16.8.4",
 		"react-dom": "16.8.4",
 		"react-scripts": "2.1.3",
