--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
 	"dependencies": {
 		"@tlaukkan/tsm": "0.8.5",
 		"@types/lodash-es": "^4.17.3",
+		"@types/offscreencanvas": "^2019.6.0",
 		"@types/prettier": "^1.18.3",
+		"@types/react-router-dom": "^5.1.2",
 		"@xstate/fsm": "^1.1.0",
 		"lodash-es": "^4.17.15",
 		"paper": "^0.12.3",
 		"prettier": "^1.19.1",
 		"react": "16.8.4",
 		"react-dom": "16.8.4",
+		"react-router-dom": "^5.1.2",
 		"react-scripts": "2.1.3",
 		"resize-observer-polyfill": "1.5.1",
 		"xstate": "^4.6.7"
