--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "2.1.3",
 		"resize-observer-polyfill": "1.5.1",
+		"utility-types": "^3.10.0",
 		"xstate": "^4.6.7"
 	},
 	"devDependencies": {
