--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
 	"keywords": [],
 	"main": "src/index.tsx",
 	"dependencies": {
+		"@mdx-js/react": "^1.5.1",
+		"@rebass/preset": "^4.0.5",
 		"@tlaukkan/tsm": "0.8.5",
 		"@types/lodash-es": "^4.17.3",
 		"@types/offscreencanvas": "^2019.6.0",
 		"@types/prettier": "^1.18.3",
 		"@types/react-router-dom": "^5.1.2",
+		"@types/rebass": "^4.0.3",
+		"@types/theme-ui": "^0.2.5",
 		"@xstate/fsm": "^1.1.0",
+		"emotion-theming": "^10.0.19",
 		"lodash-es": "^4.17.15",
 		"paper": "^0.12.3",
 		"prettier": "^1.19.1",
@@ -18,7 +23,9 @@
 		"react-dom": "16.8.4",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "2.1.3",
+		"rebass": "^4.0.7",
 		"resize-observer-polyfill": "1.5.1",
+		"theme-ui": "^0.2.49",
 		"utility-types": "^3.10.0",
 		"xstate": "^4.6.7"
 	},
