--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
 		"@types/rebass": "^4.0.3",
 		"@types/theme-ui": "^0.2.5",
 		"@xstate/fsm": "^1.1.0",
+		"astar-typescript": "^1.1.9",
 		"emotion-theming": "^10.0.19",
 		"lodash-es": "^4.17.15",
+		"ngraph.graph": "^19.1.0",
+		"ngraph.path": "^1.3.1",
 		"paper": "^0.12.3",
+		"popmotion": "^8.7.3",
 		"prettier": "^1.19.1",
 		"react": "16.8.4",
 		"react-dom": "16.8.4",
